--- a/emi/emi_refs.bib
+++ b/emi/emi_refs.bib
@@ -12,3 +12,7 @@
   note = {\url{https://en.wikipedia.org/wiki/Phase_modulation}}
 }
 
+@misc{wikiversity_rect,
+  title = {{Discrete Time Rect Functions}},
+  note = {\url{https://upload.wikimedia.org/wikiversity/en/0/0f/FPairs.4.B.DTRect.201304020.pdf}}
+}
